@startuml

skinparam linetype polyline
skinparam linetype ortho

class GeoLocation {
    - lat: float
    - long: float
}

class Location {
    - id: int
    - timestamp: int
    - geo_location: GeoLocation
    - admin_location: AdminLocation
}

class AdminLocation {
    - street: string
    - postal_code: string
    - city: string
    - country: string
}

class CargoItem {
    - loading_meter: float
    - weight: float
    - load_carrier: bool
    - load_carrier_nestable: bool
}

class CargoOrder {
    - id: int
    - origin: Location
    - destination: Location
    - cargo_item: CargoItem
    - customer: string
    - data_source: string
    - route_locations: list<GeoLocation>
}

class Vehicle {
    - id: int
    - type: string
    - stackable: bool
    - max_loading_meter: float
    - max_weight: float
}

class CompletedTrip {
    - id: int
    - origin: Location
    - destination: Location
    - cargo_item: CargoItem
    - customer: string
    - vehicle: Vehicle
    - data_source: string
    - route_locations: list<GeoLocation>
}



class TripSection {
    - origin: Location
    - destination: Location
    - loaded_cargo: list<CargoItem>
}

class ProjectedTrip {
    - id: int
    - included_orders: list<CargoOrder>
    - vehicle: Vehicle
    - trip_sections: list<TripSection>
}

Location "1" --> "0..*" GeoLocation 
Location --> AdminLocation 
CargoOrder "1" --> "1" Location 
CargoOrder "1" --> "1" Location 
CargoOrder "1" --> "1" CargoItem 
CargoOrder "0..*" --> "1" GeoLocation 
CompletedTrip "1" --> "1" Location 
CompletedTrip "1" --> "1" CargoItem 
CompletedTrip "0..*" --> "1" GeoLocation 


@enduml
